<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cristiansanchez.mytweetapp.TweetDetailActivity">

    <ImageView
        android:id="@+id/ivUserImg"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/test_tweet_user_name"
        android:textStyle="bold"
        android:layout_above="@+id/tvUserScreenName"
        android:layout_toRightOf="@+id/ivUserImg"
        android:layout_toEndOf="@+id/ivUserImg" />

    <TextView
        android:id="@+id/tvUserScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/test_tweet_user_screen_name"
        android:layout_below="@+id/tvCreatedAt"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_alignStart="@+id/tvUserName" />

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:maxLines="1"
        android:text="1h" />

    <TextView
        android:id="@+id/tvTweetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:ellipsize="end"
        android:linksClickable="true"
        tools:text="@string/test_tweet_text"
        android:layout_below="@+id/ivUserImg"
        android:layout_alignLeft="@+id/ivUserImg"
        android:layout_alignStart="@+id/ivUserImg" />

</RelativeLayout>
