<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:text="@string/reply_to"
        android:maxLines="1"
        android:layout_margin="8dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        style="@style/TwitterFont"
        android:textSize="13sp"
        android:textStyle="normal"/>

    <EditText
        android:id="@+id/etTweet"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:cursorVisible="true"
        android:gravity="top|left"
        android:layout_below="@+id/tvLabel"
        style="@style/TwitterFont"
        android:textSize="13sp"
        android:textStyle="normal"
        />

    <Button
        android:id="@+id/btReplyTweet"
        android:textColor="@android:color/white"
        android:text="@string/reply_tweet"
        android:background="@color/twitterLogo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@string/twitter_font"
        android:onClick="replyTweet"
        />


    <TextView
        android:id="@+id/tvCharacterCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginRight="8dp"
        tools:text="120"
        style="@style/TwitterFont"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btReplyTweet"
        android:layout_toStartOf="@+id/btReplyTweet" />

</RelativeLayout>